@startumlclassDiagram

             class CephalopodWorksheet {
                 <<interface>>
                 +unroll() CephalopodWorksheet
                 +calculateGrandTotal() long
             }

             class MathProblem {
                 <<record>>
                 +numbers: List~Long~
                 +operator: Operator
                 +solve() long
             }

             class Operator {
                 <<enumeration>>
                 ADD
                 MULTIPLY
                 -symbol: char
                 -operation: LongBinaryOperator
                 -identity: long
                 +from(symbol: char)$ Operator
                 +apply(numbers: Stream~Long~) long
             }

             class VerticalCephalopodWorksheet {
                 -lines: List~String~
                 -VerticalCephalopodWorksheet(lines: List~String~)
                 +from(rawLines: List~String~)$ CephalopodWorksheet
                 +unroll() CephalopodWorksheet
                 +calculateGrandTotal() long
             }

             class VerticalWorksheetProcessor {
                 <<package-private>>
                 ~padToMaxWidth(lines: List~String~)$ List~String~
                 ~extractProblems(lines: List~String~)$ Stream~MathProblem~
                 -findDelimiterColumns(lines: List~String~)$ List~Integer~
                 -sliceBlock(lines: List~String~, start: int, end: int)$ List~String~
                 -parseVerticalProblem(block: List~String~)$ MathProblem
                 -extractNumberFromColumn(block: List~String~, col: int)$ String
             }

             VerticalCephalopodWorksheet ..|> CephalopodWorksheet : implements
             VerticalCephalopodWorksheet ..> VerticalWorksheetProcessor : uses (Facade)
             VerticalWorksheetProcessor ..> MathProblem : creates
             MathProblem --> Operator : has
             VerticalWorksheetProcessor ..> Operator : searches

@enduml